# cxx-template

./: .clang-tidy  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: ccpp.yml
include/: CMakeLists.txt
include/gsl/: CMakeLists.txt
src/: CMakeLists.txt  foo.cc
src/bar/: CMakeLists.txt
test/: CMakeLists.txt
